other/block-updates-deletes/.chainsaw-test/chainsaw-step-03-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: svc-manager
rules:
- apiGroups:
  - ""
  resources:
  - services
  verbs:
  - create
  - delete
  - update
  - get
  - patch
