other/block-updates-deletes/.chainsaw-test/svc-bad-update.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  namespace: block-updates-deletes-ns
  name: svc02
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
