other/block-updates-deletes/block-updates-deletes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-updates-deletes
  annotations:
    policies.kyverno.io/title: Block Updates and Deletes
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: RBAC
    policies.kyverno.io/description: >-
      Kubernetes RBAC allows for controls on kinds of resources or those
      with specific names. But it does not have the type of granularity often
      required in more complex environments. This policy restricts updates and deletes to any
      Service resource that contains the label `protected=true` unless by
      a cluster-admin.
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: block-updates-deletes
    match:
      any:
      - resources:
          kinds:
          - Service
          selector:
            matchLabels:
              protected: "true"
    exclude:
      any:
      - clusterRoles:
        - cluster-admin
    validate:
      message: "This resource is protected and changes are not allowed. Please seek a cluster-admin."
      deny:
        conditions:
          any:
            - key: "{{request.operation || 'BACKGROUND'}}"
              operator: AnyIn
              value:
              - DELETE
              - UPDATE
