other/block-updates-deletes/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-updates-deletes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-updates-deletes.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          export USERNAME=blocksvcuser
          export CA=ca.crt
          #### Get CA certificate from kubeconfig assuming it's the first in the list.
          kubectl config view --raw -o jsonpath='{.clusters[0].cluster.certificate-authority-data}' | base64 --decode > ./ca.crt
          #### Set CLUSTER_SERVER from kubeconfig assuming it's the first in the list.
          CLUSTER_SERVER="$(kubectl config view --raw -o jsonpath='{.clusters[0].cluster.server}')"
          #### Set CLUSTER from kubeconfig assuming it's the first in the list.
          CLUSTER="$(kubectl config view --raw -o jsonpath='{.clusters[0].name}')"
          #### Generate private key
          openssl genrsa -out $USERNAME.key 2048
          #### Create CSR
          openssl req -new -key $USERNAME.key -out $USERNAME.csr -subj "/O=testorg/CN=$USERNAME"
          #### Send CSR to kube-apiserver for approval
          cat <<EOF | kubectl apply -f -
          apiVersion: certificates.k8s.io/v1
          kind: CertificateSigningRequest
          metadata:
            name: $USERNAME
          spec:
            request: $(cat $USERNAME.csr | base64 | tr -d '\n')
            signerName: kubernetes.io/kube-apiserver-client
            usages:
            - client auth
          EOF
          #### Approve CSR
          kubectl certificate approve $USERNAME
          #### Download certificate
          kubectl get csr $USERNAME -o jsonpath='{.status.certificate}' | base64 --decode > $USERNAME.crt
          ####
          #### Create the credential object and output the new kubeconfig file
          kubectl config set-credentials $USERNAME --client-certificate=$USERNAME.crt --client-key=$USERNAME.key --embed-certs
          #### Set the context
          kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
          # Delete CSR
          kubectl delete csr $USERNAME
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1.yaml
    - apply:
        file: chainsaw-step-03-apply-2.yaml
  - name: step-04
    try:
    - script:
        content: kubectl create --context=blocksvcuser-context -n block-updates-deletes-ns -f svc.yaml
    - script:
        content: kubectl apply --context=blocksvcuser-context -n block-updates-deletes-ns -f svc-good-update.yaml
    - script:
        content: if kubectl apply --context=blocksvcuser-context -n block-updates-deletes-ns
          -f svc-bad-update.yaml; then exit 1; else exit 0; fi
    - script:
        content: kubectl delete svc --context=blocksvcuser-context -n block-updates-deletes-ns svc01
    - script:
        content: if kubectl delete svc --context=blocksvcuser-context -n block-updates-deletes-ns
          svc02; then exit 1; else exit 0; fi
    - script:
        content: kubectl apply -n block-updates-deletes-ns -f svc-bad-update.yaml
    - script:
        content: kubectl delete svc -n block-updates-deletes-ns svc02
  - name: step-05
    try:
    - script:
        content: kubectl config unset users.blocksvcuser
    - script:
        content: kubectl config unset contexts.blocksvcuser-context
